Update AI Work Prompt FoodX.ipynb
Updated version

--- a/AI Work Prompt FoodX.ipynb
+++ b/AI Work Prompt FoodX.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "ca272e4d",
+   "execution_count": 138,
+   "id": "b0fc6f08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,15 @@
     "import re\n",
     "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.decomposition import PCA\n"
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "filePathMenu = 'XTern 2024 Artificial Intelegence Data Set - Menu.csv'\n",
+    "filePathData = 'XTern 2024 Artificial Intelegence Data Set - Xtern_TrainData.csv'\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e74b099b",
+   "id": "2d27f005",
    "metadata": {},
    "source": [
     "### Import data"
@@ -32,19 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "99a82eb4",
+   "execution_count": 140,
+   "id": "b0686273",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfMenu = pd.read_csv('C:/Users/v3476/3D Objects/Xtern AI Work Prompt/XTern 2024 Artificial Intelegence Data Set - Menu.csv')\n",
-    "dfData = pd.read_csv('C:/Users/v3476/3D Objects/Xtern AI Work Prompt/XTern 2024 Artificial Intelegence Data Set - Xtern_TrainData.csv')\n"
+    "dfMenu = pd.read_csv(filePathMenu)\n",
+    "dfData = pd.read_csv(filePathData)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "820af00e",
+   "execution_count": 141,
+   "id": "89b55033",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +126,7 @@
        "4           4              Fried Catfish Basket     10       600"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "bc064855",
+   "execution_count": 142,
+   "id": "b4bed840",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +230,7 @@
        "4  Indiana Corn on the Cob (brushed with garlic b...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96bd799f",
+   "id": "5e54c4e3",
    "metadata": {},
    "source": [
     "### Given the data set, do a quick exploratory data analysis to get a feel for the distributions and biases of the data.  Report any visualizations and findings used and suggest any other impactful business use cases for that data."
@@ -247,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "8a8aa4ca",
+   "id": "0067bf4f",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51637126",
+   "id": "0dc52689",
    "metadata": {},
    "source": [
     "### Consider implications of data collection, storage, and data biases you would consider relevant here considering Data Ethics, Business Outcomes, and Technical Implications\n",
@@ -351,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e99dc8b",
+   "id": "b3b117a8",
    "metadata": {},
    "source": [
     "##### Discuss Ethical implications of these factors\n",
@@ -361,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3a70185",
+   "id": "2a3e18c1",
    "metadata": {},
    "source": [
     "##### Discuss Business outcome implications of these factors\n",
@@ -372,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5438757",
+   "id": "7cad97fc",
    "metadata": {},
    "source": [
     "##### Discuss Technical implications of these factors\n",
@@ -383,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e591497a",
+   "id": "9c357de2",
    "metadata": {},
    "source": [
     "### Build a model to predict a customers order from their available information.\n",
@@ -393,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dcaa283",
+   "id": "fbdce586",
    "metadata": {},
    "source": [
     "#### Outline your process for model selection, training and testing. Including data preparation."
@@ -402,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e0893de7",
+   "id": "94412d93",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6150b591",
+   "id": "f96cf3cc",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b332fb81",
+   "id": "79bcbd2b",
    "metadata": {},
    "source": [
     "So, all the string data has to be put into number format for the interpreter to work. Given that we have 5,000 rows of data, I think an 80-20 split would be fine (80% of the data used for training, 20% of the data used for testing). The Major and University data can be changed into numerical values using one-hot-encoder. The time data is already a numerical value, and the year data can be changed into numerical values by keeping the year number alone. \n"
@@ -604,177 +607,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "d7754e87",
+   "execution_count": 143,
+   "id": "2bc6c79e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Major</th>\n",
-       "      <th>University</th>\n",
-       "      <th>Time</th>\n",
-       "      <th>Order</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Year 2</td>\n",
-       "      <td>Physics</td>\n",
-       "      <td>Indiana State University</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Fried Catfish Basket</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Year 3</td>\n",
-       "      <td>Chemistry</td>\n",
-       "      <td>Ball State University</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Sugar Cream Pie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Year 3</td>\n",
-       "      <td>Chemistry</td>\n",
-       "      <td>Butler University</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Indiana Pork Chili</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Year 2</td>\n",
-       "      <td>Biology</td>\n",
-       "      <td>Indiana State University</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Fried Catfish Basket</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Year 3</td>\n",
-       "      <td>Business Administration</td>\n",
-       "      <td>Butler University</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Indiana Corn on the Cob (brushed with garlic b...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4995</th>\n",
-       "      <td>Year 2</td>\n",
-       "      <td>Mathematics</td>\n",
-       "      <td>Ball State University</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Breaded Pork Tenderloin Sandwich</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4996</th>\n",
-       "      <td>Year 3</td>\n",
-       "      <td>Astronomy</td>\n",
-       "      <td>Indiana State University</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Ultimate Grilled Cheese Sandwich (with bacon a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4997</th>\n",
-       "      <td>Year 3</td>\n",
-       "      <td>Chemistry</td>\n",
-       "      <td>Butler University</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Sugar Cream Pie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4998</th>\n",
-       "      <td>Year 3</td>\n",
-       "      <td>Astronomy</td>\n",
-       "      <td>Butler University</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Sugar Cream Pie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4999</th>\n",
-       "      <td>Year 2</td>\n",
-       "      <td>Economics</td>\n",
-       "      <td>University of Notre Dame</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Breaded Pork Tenderloin Sandwich</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5000 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Year                    Major                University  Time  \\\n",
-       "0     Year 2                  Physics  Indiana State University    12   \n",
-       "1     Year 3                Chemistry     Ball State University    14   \n",
-       "2     Year 3                Chemistry         Butler University    12   \n",
-       "3     Year 2                  Biology  Indiana State University    11   \n",
-       "4     Year 3  Business Administration         Butler University    12   \n",
-       "...      ...                      ...                       ...   ...   \n",
-       "4995  Year 2              Mathematics     Ball State University    11   \n",
-       "4996  Year 3                Astronomy  Indiana State University    12   \n",
-       "4997  Year 3                Chemistry         Butler University    13   \n",
-       "4998  Year 3                Astronomy         Butler University    15   \n",
-       "4999  Year 2                Economics  University of Notre Dame    15   \n",
-       "\n",
-       "                                                  Order  \n",
-       "0                                  Fried Catfish Basket  \n",
-       "1                                       Sugar Cream Pie  \n",
-       "2                                    Indiana Pork Chili  \n",
-       "3                                  Fried Catfish Basket  \n",
-       "4     Indiana Corn on the Cob (brushed with garlic b...  \n",
-       "...                                                 ...  \n",
-       "4995                   Breaded Pork Tenderloin Sandwich  \n",
-       "4996  Ultimate Grilled Cheese Sandwich (with bacon a...  \n",
-       "4997                                    Sugar Cream Pie  \n",
-       "4998                                    Sugar Cream Pie  \n",
-       "4999                   Breaded Pork Tenderloin Sandwich  \n",
-       "\n",
-       "[5000 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dfMenu = pd.read_csv('C:/Users/v3476/3D Objects/Xtern AI Work Prompt/XTern 2024 Artificial Intelegence Data Set - Menu.csv')\n",
-    "dfData = pd.read_csv('C:/Users/v3476/3D Objects/Xtern AI Work Prompt/XTern 2024 Artificial Intelegence Data Set - Xtern_TrainData.csv')\n",
-    "dfData"
+    "dfMenu = pd.read_csv(filePathMenu)\n",
+    "dfData = pd.read_csv(filePathData)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "43e22b7f",
+   "execution_count": 144,
+   "id": "6c7078cb",
    "metadata": {},
    "outputs": [
     {
@@ -831,8 +676,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "4ef57f3f",
+   "execution_count": 145,
+   "id": "d1fb733f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,8 +691,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "fda303c9",
+   "execution_count": 146,
+   "id": "0a7e82d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,8 +704,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "id": "b3da509c",
+   "execution_count": 147,
+   "id": "74cf9450",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,8 +718,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "57a9b60c",
+   "execution_count": 148,
+   "id": "5da5528c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8baa9c8",
+   "id": "f29dfb5f",
    "metadata": {},
    "source": [
     "### Model has been trained, now its time to see how the model turned out"
@@ -896,8 +741,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "34ad2664",
+   "execution_count": 149,
+   "id": "964be8dc",
    "metadata": {},
    "outputs": [
     {
@@ -930,8 +775,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "51161218",
+   "execution_count": 150,
+   "id": "ca5aca0a",
    "metadata": {},
    "outputs": [
     {
@@ -964,8 +809,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "d065a884",
+   "execution_count": 151,
+   "id": "56f52411",
    "metadata": {
     "scrolled": true
    },
@@ -1007,7 +852,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,23 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c1b1c55",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "009443f9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab1c9928",
+   "id": "914e3895",
    "metadata": {},
    "outputs": [],
    "source": []
