Update AI Work Prompt FoodX.ipynb
Updated version for the code

--- a/AI Work Prompt FoodX.ipynb
+++ b/AI Work Prompt FoodX.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "b0fc6f08",
+   "id": "50b84854",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d27f005",
+   "id": "04fea551",
    "metadata": {},
    "source": [
     "### Import data"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "b0686273",
+   "id": "be251594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "89b55033",
+   "id": "e1a20a98",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "b4bed840",
+   "id": "b621679a",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e54c4e3",
+   "id": "ea63f62f",
    "metadata": {},
    "source": [
     "### Given the data set, do a quick exploratory data analysis to get a feel for the distributions and biases of the data.  Report any visualizations and findings used and suggest any other impactful business use cases for that data."
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0067bf4f",
+   "id": "f8ee60af",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dc52689",
+   "id": "bc45d6b6",
    "metadata": {},
    "source": [
     "### Consider implications of data collection, storage, and data biases you would consider relevant here considering Data Ethics, Business Outcomes, and Technical Implications\n",
@@ -354,39 +354,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3b117a8",
+   "id": "7f2f6d1d",
    "metadata": {},
    "source": [
     "##### Discuss Ethical implications of these factors\n",
     "\n",
-    "sfd"
+    "Privacy Concerns:\n",
+    "- Data Collection: The collection of personal data raises privacy concerns. If sensitive information is collected without the user's consent, it would be a violation of the user's privacy rights.\n",
+    "- Storage: Storing personal information securely is important to prevent unauthorized people from accessing the user's personal information. Also, all the stored data must be securely encrypted. \n",
+    "\n",
+    "Biases and Fairness:\n",
+    "- Data Collection: If data collection methods are biased, it can lead to biased models and unfair outcomes. This may affect certain demographic groups unfairly.\n",
+    "- Storage: Biases in historical data can increase biases over time. \n",
+    "\n",
+    "Transparency and Accountability:\n",
+    "- Data Collection: Lack of transparency in data collection processes can cause mistrust. The collector must show some form of accountability to ensure the data is collected ethically and used responsibly. THis maintains the trust between the user giving the data, and the collector using the data. \n",
+    "- Storage: Clear data storage practices and governance policies are a necessity to build and maintain trust. Also, ensuring all data is encrupted is a requirement. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2a3e18c1",
+   "id": "0d0a59f5",
    "metadata": {},
    "source": [
     "##### Discuss Business outcome implications of these factors\n",
     "\n",
+    "Decision-Making Quality:\n",
+    "- Data Collection: The quality of data collected directly influences the accuracy and reliability of decision-making. Poor quality data can lead to incorrect business insights.\n",
+    "- Storage: Proper data storage makes sure high-quality data is always ready for analysis.\n",
     "\n",
-    "wer"
+    "Customer Trust and Reputation:\n",
+    "- Data Collection: Ethical data practices contribute to customer trust. Unethical data collection will harm a company's reputation, reducing affecting customer loyalty and trust, leading to a bad brand image.\n",
+    "- Storage: Secure data storage is important to prevent data breaches. These breaches can lead to lost personal information of customers, which causes a loss of trust and damage to the company's reputation.\n",
+    "\n",
+    "Legal Compliance:\n",
+    "- Data Collection: Following ethical standards in data collection ensures compliance with privacy laws and regulations.\n",
+    "- Storage: Proper data storage practices help in complying with data protection laws and avoiding legal issues."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7cad97fc",
+   "id": "7f89eef3",
    "metadata": {},
    "source": [
     "##### Discuss Technical implications of these factors\n",
     "\n",
+    "Data Integration and Compatibility:\n",
+    "- Data Collection: Making sure the data collection methods are compatibile and standardized allows the company to create and integrate a variety of datasets.\n",
+    "- Storage: Proper data storage systems allow clean integration and retrieval of information.\n",
     "\n",
-    "efsf"
+    "Scalability:\n",
+    "- Data Collection: Scalable data collection methods are important when handling datasets that grow.\n",
+    "- Storage: Scalable storage solutions are just as important to accommodate the increasing size of data.\n",
+    "\n",
+    "Data Security:\n",
+    "- Data Collection: Secure data collection protocols prevent unauthorized access and data breaches.\n",
+    "- Storage: Proper security measures are required in data storage to protect against cyber threats and to ensure the integrity of the stored data."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9c357de2",
+   "id": "7cee46a5",
    "metadata": {},
    "source": [
     "### Build a model to predict a customers order from their available information.\n",
@@ -396,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbdce586",
+   "id": "0b624891",
    "metadata": {},
    "source": [
     "#### Outline your process for model selection, training and testing. Including data preparation."
@@ -405,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "94412d93",
+   "id": "6893b9aa",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f96cf3cc",
+   "id": "0701622b",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79bcbd2b",
+   "id": "17e20600",
    "metadata": {},
    "source": [
     "So, all the string data has to be put into number format for the interpreter to work. Given that we have 5,000 rows of data, I think an 80-20 split would be fine (80% of the data used for training, 20% of the data used for testing). The Major and University data can be changed into numerical values using one-hot-encoder. The time data is already a numerical value, and the year data can be changed into numerical values by keeping the year number alone. \n"
@@ -608,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "2bc6c79e",
+   "id": "57f12879",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "6c7078cb",
+   "id": "3a964012",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "d1fb733f",
+   "id": "dd7c2a6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "0a7e82d4",
+   "id": "e674d132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "74cf9450",
+   "id": "e0316ba0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "5da5528c",
+   "id": "17f886a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f29dfb5f",
+   "id": "2ab542e3",
    "metadata": {},
    "source": [
     "### Model has been trained, now its time to see how the model turned out"
@@ -742,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "964be8dc",
+   "id": "b1c53d7c",
    "metadata": {},
    "outputs": [
     {
@@ -776,8 +804,10 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "ca5aca0a",
-   "metadata": {},
+   "id": "82520e35",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -810,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "56f52411",
+   "id": "b6f182bd",
    "metadata": {
     "scrolled": true
    },
@@ -865,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "914e3895",
+   "id": "2b457d51",
    "metadata": {},
    "outputs": [],
    "source": []
